kustomize/app/cache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apps-nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: apps-nginx
